[gd_scene load_steps=10 format=3 uid="uid://b8ku584hmtl2q"]

[ext_resource type="Texture2D" uid="uid://bop0udc76wudq" path="res://assets/UI/background.jpeg" id="1_d1ula"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_iq75x"]
[ext_resource type="Texture2D" uid="uid://djialooc57oby" path="res://assets/UI/Sprite sheets/UI Big Play Button.png" id="3_o7cay"]
[ext_resource type="FontFile" uid="uid://cotm02uvrmm48" path="res://assets/UI/fonts/Jersey10-Regular.ttf" id="3_pje0l"]
[ext_resource type="FontFile" uid="uid://k5q4oy0rhbbv" path="res://assets/UI/fonts/PixelOperator8.ttf" id="3_po6o1"]
[ext_resource type="PackedScene" uid="uid://bw7fske4qa025" path="res://scenes/objects/fade_transition.tscn" id="6_d6c0m"]
[ext_resource type="AudioStream" uid="uid://dsvxqsfjbdka7" path="res://audio/menu_screen.mp3" id="7_ynvj7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8wo8o"]
atlas = ExtResource("3_o7cay")
region = Rect2(3, 2, 90, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7qe"]
atlas = ExtResource("3_o7cay")
region = Rect2(99, 4, 90, 25)

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iq75x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_d1ula")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 2
offset_top = 120.0
offset_right = 1152.0
offset_bottom = 221.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 39
theme_override_fonts/font = ExtResource("3_pje0l")
theme_override_font_sizes/font_size = 167
text = "WELCOME"
horizontal_alignment = 1

[node name="Start" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -3.0
offset_right = -22.9999
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_8wo8o")
texture_pressed = SubResource("AtlasTexture_2v7qe")

[node name="Label" type="Label" parent="TextureRect/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -8.0
offset_right = 35.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.768917, 0.6038, 0.423545, 1)
theme_override_fonts/font = ExtResource("3_po6o1")
text = "START"

[node name="Quit" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 98.0
offset_right = -19.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_8wo8o")
texture_pressed = SubResource("AtlasTexture_2v7qe")

[node name="Label" type="Label" parent="TextureRect/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -8.0
offset_right = 26.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.768917, 0.6038, 0.423545, 1)
theme_override_fonts/font = ExtResource("3_po6o1")
text = "QUIT"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ynvj7")
volume_db = 2.0
autoplay = true
bus = &"Main menu"

[node name="Fade_transition" parent="." instance=ExtResource("6_d6c0m")]
visible = false
layout_mode = 1

[node name="Timer" type="Timer" parent="Fade_transition"]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="TextureRect/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TextureRect/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Fade_transition/Timer" to="." method="_on_timer_timeout"]
